[build-system]
requires = [
    "setuptools>=61.0",
    "aiohttp>=3.6.0,<3.8.0",
    "PyNaCl>=1.5.0",
    "requests>=2.26.0",
    "quart>=0.17.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "disunity"
version = "0.1.16"
authors = [
    {name="Tadeo Murillo"},
    {name=""}
]
description = "Python framework for Discord interactions using a web server"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepoge" = "https://github.com/murillotadeo/disunity"
"Bug Tracker" = "https://github.com/murillotadeo/disunity/issues"
